# 10bis-sensor

./: .gitignore  Dockerfile  build.sh  main.py  pyproject.toml  sync.sh
