[tool.poetry]
name = "10bis-sensor"
version = "0.1.0"
description = ""
authors = ["aryeguy <arye.guy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
prometheus_client = "^0.8.0"
money-parser = "^0.0.1"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
